Style: solved aligned issues with sidebar

--- a/blog-website/blog-post/author.css
+++ b/blog-website/blog-post/author.css
@@ -19,6 +19,10 @@
     margin-top: 4em;
 }
 
+.social{
+    margin: 0 7em;
+}
+
 #contact{
     text-align: center;
 }
@@ -46,24 +50,32 @@
 }
 
 
-}
 @media(min-width: 600px){
+    .author{
+        display: flex;
+        flex-direction: column;
+    }
     #avatar{
-        margin: 1em 5em  1em;
-        width: 200px
+        width: 200px;
     }
 
     #bio{
         margin: 0;
     }
 
+    .social{
+        margin: 0;
+    }
+    
     .fa {
-        padding: 0;
-        font-size: 35px;
+        padding: 15px;
+        font-size: 30px;
         width: 20px;
         text-align: center;
         text-decoration: none;
         margin: 0;
         color: #fff;
+        border-radius: 50%;
       }
-}
+
+    }
