--- a/blog-website/blog-post/style2.css
+++ b/blog-website/blog-post/style2.css
@@ -41,7 +41,7 @@ body{
     margin: 0;
     height: auto;
     display: grid;
-    grid-template-columns: 75% 1fr;
+    grid-template-columns: 3fr 1fr;
     grid-template-rows: 0.3fr 4fr 0.2fr;
     grid-template-areas: 
     "nb   nb"
